# what flags you want to pass to the C compiler & linker
AM_CFLAGS = -Wall -W -std=c99 -O2
AM_LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = lexecd lxd_check
lexecd_SOURCES = lexecd/lexecd.c lexecd/lexecd.h
lxd_check_SOURCES = lxd_check/lxd_check.c
