TESTS = check_libjson_till_eos
check_PROGRAMS = check_libjson_till_eos
check_libjson_till_eos_SOURCES = check_libjson_till_eos.c $(top_builddir)/src/libjson/till_eos.h
check_libjson_till_eos_CFLAGS = -Wall -W -std=c99 @CHECK_CFLAGS@
check_libjson_till_eos_LDADD = @CHECK_LIBS@
#check_libjson_till_eos_LDADD = $(top_builddir)/src/libjson/libjson.la @CHECK_LIBS@

